<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/share_dialog"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingTop="20dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/contact_info_cancelButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:drawablePadding="5dip"
            android:drawableTop="@drawable/logo_sinaweibo"
            android:gravity="center"
            android:text="@string/xweibo"
            android:textColor="@color/white"
            android:typeface="sans" />

        <TextView
            android:id="@+id/contact_info_positiveButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:drawablePadding="5dip"
            android:drawableTop="@drawable/logo_wechat"
            android:gravity="center"
            android:text="@string/weixin"
            android:textColor="@color/white"
            android:typeface="sans" />

        <TextView
            android:id="@+id/contact_info_negativeButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:drawablePadding="5dip"
            android:drawableTop="@drawable/logo_wechatmoments"
            android:gravity="center"
            android:text="@string/pengyouquan"
            android:textColor="@color/white"
            android:typeface="sans" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="180dip"
        android:layout_height="40dip"
        android:layout_gravity="center"
        android:layout_marginBottom="20dip"
        android:background="@color/foot_black"
        android:text="@string/zh_cancel"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>