<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/vip_service"
        android:textColor="@color/text3"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/vip_service_content"
        android:textColor="@color/text3"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnApplyVip"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_apply_vip"
        android:gravity="center"
        android:text="@string/application"
        android:textColor="@color/foot_black"
        android:textSize="18sp"
        android:typeface="sans" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_time"
        android:text="@string/zh_cancel"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>