<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:layout_gravity="center" android:orientation="vertical">

	<TextView android:layout_width="match_parent"
		android:layout_height="wrap_content" android:gravity="center|top"
		android:padding="10dip" android:text="@string/i_am" android:textColor="@color/foot_black"
		android:textSize="18sp" android:typeface="sans" />

	<EditText android:id="@+id/member_edit" android:layout_width="match_parent"
		android:layout_height="50dip" android:layout_marginLeft="10dip"
		android:layout_marginRight="10dip" android:inputType="text" />

	<TextView android:layout_width="match_parent"
		android:layout_height="wrap_content" android:gravity="center|top"
		android:padding="10dip" android:text="@string/dialog_add_member"
		android:textColor="@color/foot_black" android:textSize="18sp"
		android:typeface="sans" />

	<TextView android:layout_width="match_parent"
		android:layout_height="4dip" android:background="@color/grey2" />

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_gravity="center"
		android:orientation="horizontal">

		<Button android:id="@+id/contact_info_positiveButton" android:layout_width="0dip"
			android:layout_height="40dip" android:layout_weight="1"
			android:background="#fff" android:gravity="center"
			android:paddingLeft="10dip" android:text="@string/ok"
			android:textColor="#000" android:textSize="20sp" android:typeface="sans" />

		<TextView android:layout_width="4dip" android:layout_height="match_parent"
			android:background="@color/grey2" />

		<Button android:id="@+id/contact_info_cancelButton" android:layout_width="0dip"
			android:layout_height="40dip" android:layout_weight="1"
			android:background="#fff" android:gravity="center"
			android:paddingLeft="10dip" android:text="@string/cancel"
			android:textColor="#000" android:textSize="20sp" android:typeface="sans" />
	</LinearLayout>

</LinearLayout>