<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="12dip" >

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:gravity="center"
        android:textColor="@color/foot_black"
        android:textSize="16sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/contact_info_remarkname"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="#fff"
        android:drawableBottom="@drawable/pref_bg_body"
        android:gravity="center"
        android:text="@string/beizhu"
        android:textColor="@color/foot_black"
        android:textSize="16sp"
        android:typeface="sans" />

    <Button
        android:id="@+id/contact_info_positiveButton"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginTop="12dp"
        android:background="#fff"
        android:drawableBottom="@drawable/pref_bg_body"
        android:gravity="center"
        android:text="@string/jiaru_family"
        android:textColor="@color/foot_black"
        android:textSize="16sp"
        android:typeface="sans" />

    <Button
        android:id="@+id/contact_info_negativeButton"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginTop="12dp"
        android:background="#fff"
        android:drawableBottom="@drawable/pref_bg_body"
        android:gravity="center"
        android:text="@string/delete_member"
        android:textColor="@color/foot_orange"
        android:textSize="16sp"
        android:typeface="sans" />

    <Button
        android:id="@+id/contact_info_cancelButton"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@color/foot_black"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>