<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include layout="@layout/title_bar_with_ibtn_left_and_right" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="12dip" >

            <LinearLayout
                android:id="@+id/line_one"
                style="@style/listSummary"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" >

                <TextView
                    style="@style/listSummary"
                    android:text="@string/summary_username"
                    android:textColor="@color/text1" />

                <TextView
                    android:id="@+id/summary_username"
                    style="@style/listSummary"
                    android:textColor="@color/foot_black" />
            </LinearLayout>

            <TextView
                android:id="@+id/summary_phone"
                style="@style/listSummary"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

            <LinearLayout
                android:id="@+id/line_two"
                style="@style/listSummary"
                android:layout_below="@+id/line_one" >

                <TextView
                    style="@style/listSummary"
                    android:text="@string/summary_address"
                    android:textColor="@color/text1" />

                <TextView
                    android:id="@+id/summary_address"
                    style="@style/listSummary"
                    android:textColor="@color/foot_black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line_three"
                style="@style/listSummary"
                android:layout_below="@id/line_two" >

                <TextView
                    style="@style/listSummary"
                    android:text="@string/summary_comment"
                    android:textColor="@color/text1" />

                <TextView
                    android:id="@+id/summary_message"
                    style="@style/listSummary"
                    android:textColor="@color/foot_black" />
            </LinearLayout>

            <TextView
                android:id="@+id/summary_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:layout_below="@+id/line_three"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/pref_bg_body" />

            <LinearLayout
                android:id="@+id/summary_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/summary_line"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                android:id="@+id/summary_line2"
                android:layout_width="match_parent"
                android:layout_height="0.5dip"
                android:layout_below="@+id/summary_layout"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/pref_bg_body" />

            <TextView
                android:id="@+id/summary_dingjin_text"
                style="@style/listSummary"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/summary_line2"
                android:text="@string/summary_dingjin"
                android:textColor="@color/text1" />

            <TextView
                android:id="@+id/summary_dingjin"
                style="@style/listSummary"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/summary_line2"
                android:textColor="@color/foot_orange" />

            <TextView
                android:id="@+id/summary_inputamount_text"
                style="@style/listSummary"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/summary_dingjin"
                android:text="@string/summary_input"
                android:textColor="@color/text1" />

            <TextView
                android:id="@+id/summary_inputamount"
                style="@style/listSummary"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/summary_dingjin"
                android:textColor="@color/foot_orange" />

            <TextView
                android:id="@+id/summary_fright_text"
                style="@style/listSummary"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/summary_inputamount"
                android:text="@string/summary_fee"
                android:textColor="@color/text1" />

            <TextView
                android:id="@+id/summary_fright"
                style="@style/listSummary"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/summary_inputamount"
                android:textColor="@color/foot_orange" />

            <TextView
                android:id="@+id/summary_total_text"
                style="@style/listSummary"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/summary_fright"
                android:text="@string/summary_total"
                android:textColor="@color/text1" />

            <TextView
                android:id="@+id/summary_total"
                style="@style/listSummary"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/summary_fright"
                android:textColor="@color/foot_orange" />

            <TextView
                android:id="@+id/summary_discount_text"
                style="@style/listSummary"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/summary_total"
                android:text="@string/summary_discount"
                android:textColor="@color/text1" />

            <TextView
                android:id="@+id/summary_discount"
                style="@style/listSummary"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/summary_total"
                android:textColor="@color/foot_orange" />

            <TextView
                android:id="@+id/summary_discount_total_text"
                style="@style/listSummary"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/summary_discount"
                android:text="@string/summary_discount_total"
                android:textColor="@color/text1" />

            <TextView
                android:id="@+id/summary_discount_total"
                style="@style/listSummary"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/summary_discount"
                android:textColor="@color/foot_orange" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/summary_total"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dip"
                android:contentDescription="@string/app_name"
                android:src="@drawable/xianxiatel" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>